{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 37,
  "lineage": "7948575c-55d7-3435-29a7-710c2f28e932",
  "resources": [
    {
      "mode": "data",
      "type": "kubernetes_namespace",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "kubernetes.io/metadata.name": "default"
                },
                "name": "default",
                "resource_version": "28",
                "uid": "1b63868c-9b2e-4479-84d7-e56e49fba40d"
              }
            ],
            "spec": [
              {
                "finalizers": [
                  "kubernetes"
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "desafio-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:870205216049:internet-gateway/igw-0f3403e5ab98879e0",
            "id": "igw-0f3403e5ab98879e0",
            "owner_id": "870205216049",
            "tags": {
              "Name": "Desafio-Internet-Gateway-LucasMenezes"
            },
            "tags_all": {
              "Name": "Desafio-Internet-Gateway-LucasMenezes"
            },
            "vpc_id": "vpc-00d0057ae92448eb9"
          },
          "dependencies": [
            "aws_vpc.desafio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "desafio-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:870205216049:route-table/rtb-0381a7371121d740d",
            "id": "rtb-0381a7371121d740d",
            "owner_id": "870205216049",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Desafio-Private-rt-LucasMenezes"
            },
            "tags_all": {
              "Name": "Desafio-Private-rt-LucasMenezes"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d0057ae92448eb9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.desafio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "desafio-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:870205216049:route-table/rtb-01da50cf7864aa6e8",
            "id": "rtb-01da50cf7864aa6e8",
            "owner_id": "870205216049",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3403e5ab98879e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Desafio-Public-rt-LucasMenezes"
            },
            "tags_all": {
              "Name": "Desafio-Public-rt-LucasMenezes"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d0057ae92448eb9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.desafio-igw",
            "aws_vpc.desafio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "desafio-private-rt-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f208aac917894ff",
            "route_table_id": "rtb-0381a7371121d740d",
            "subnet_id": "subnet-0824b4eeba36362ab"
          },
          "dependencies": [
            "aws_route_table.desafio-private-rt",
            "aws_subnet.desafio-private-subnet-1",
            "aws_vpc.desafio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "desafio-private-rt-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca21f86e4cc2df0f",
            "route_table_id": "rtb-0381a7371121d740d",
            "subnet_id": "subnet-0740566926c015caf"
          },
          "dependencies": [
            "aws_route_table.desafio-private-rt",
            "aws_subnet.desafio-private-subnet-2",
            "aws_vpc.desafio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "desafio-public-rt-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016f8dfd1a658c837",
            "route_table_id": "rtb-01da50cf7864aa6e8",
            "subnet_id": "subnet-00742450bf61563db"
          },
          "dependencies": [
            "aws_internet_gateway.desafio-igw",
            "aws_route_table.desafio-public-rt",
            "aws_subnet.desafio-public-subnet-1",
            "aws_vpc.desafio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "desafio-public-rt-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7a14287b4b49ef8",
            "route_table_id": "rtb-01da50cf7864aa6e8",
            "subnet_id": "subnet-04dc6785d2b77c5c0"
          },
          "dependencies": [
            "aws_internet_gateway.desafio-igw",
            "aws_route_table.desafio-public-rt",
            "aws_subnet.desafio-public-subnet-2",
            "aws_vpc.desafio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "desafio-sg-cluster-eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:870205216049:security-group/sg-04bea1344732260c6",
            "description": "AWS sg for terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04bea1344732260c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "128.0.1.0/24",
                  "128.0.2.0/24",
                  "128.0.0.0/16"
                ],
                "description": "",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65365
              }
            ],
            "name": "desafio-sg-cluster-LucasMenezes",
            "name_prefix": "",
            "owner_id": "870205216049",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00d0057ae92448eb9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.desafio-public-subnet-1",
            "aws_subnet.desafio-public-subnet-2",
            "aws_vpc.desafio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "desafio-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:870205216049:subnet/subnet-0824b4eeba36362ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "128.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0824b4eeba36362ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870205216049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Desafio-Private-Subnet-1-LucasMenezes"
            },
            "tags_all": {
              "Name": "Desafio-Private-Subnet-1-LucasMenezes"
            },
            "vpc_id": "vpc-00d0057ae92448eb9"
          },
          "dependencies": [
            "aws_vpc.desafio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "desafio-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:870205216049:subnet/subnet-0740566926c015caf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "128.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0740566926c015caf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870205216049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Desafio-Private-Subnet-2-LucasMenezes"
            },
            "tags_all": {
              "Name": "Desafio-Private-Subnet-2-LucasMenezes"
            },
            "vpc_id": "vpc-00d0057ae92448eb9"
          },
          "dependencies": [
            "aws_vpc.desafio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "desafio-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:870205216049:subnet/subnet-00742450bf61563db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "128.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00742450bf61563db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "870205216049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Desafio-Public-Subnet-1-LucasMenezes"
            },
            "tags_all": {
              "Name": "Desafio-Public-Subnet-1-LucasMenezes"
            },
            "vpc_id": "vpc-00d0057ae92448eb9"
          },
          "dependencies": [
            "aws_vpc.desafio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "desafio-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:870205216049:subnet/subnet-04dc6785d2b77c5c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "128.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dc6785d2b77c5c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "870205216049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Desafio-Public-Subnet-2-LucasMenezes"
            },
            "tags_all": {
              "Name": "Desafio-Public-Subnet-2-LucasMenezes"
            },
            "vpc_id": "vpc-00d0057ae92448eb9"
          },
          "dependencies": [
            "aws_vpc.desafio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "desafio-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:870205216049:vpc/vpc-00d0057ae92448eb9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "128.0.0.0/16",
            "default_network_acl_id": "acl-07bd576115002e8ed",
            "default_route_table_id": "rtb-05303d9d887c589e6",
            "default_security_group_id": "sg-0c69b594b7255a18a",
            "dhcp_options_id": "dopt-088cabec39e54a047",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d0057ae92448eb9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05303d9d887c589e6",
            "owner_id": "870205216049",
            "tags": {
              "Name": "Desafio-VPC-LucaMenezes"
            },
            "tags_all": {
              "Name": "Desafio-VPC-LucaMenezes"
            }
          }
        }
      ]
    }
  ]
}